# 115-plus-desktop

./: .gitignore  package-lock.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/api/: client.rs  commands.rs  mod.rs  routes.rs
src-tauri/src/api/handlers/: download.rs  files.rs  health.rs  mod.rs  standalone.rs  starred.rs  upload.rs  user.rs  video.rs
src/api/: file.ts
src/components/FileExplorer/: FileExplorer.vue  types.ts
src/components/FileExplorer/components/ExplorerContextMenu/: ExplorerContextMenu.vue
src/components/FileExplorer/components/FileItemView/: FileItemView.vue
src/layout/: index.vue
src/router/: index.ts
src/views/Starred/: StarredView.vue
