[package]
name = "oof-plus-desktop"
version = "1.0.7"
description = "115+ 是一个基于 115 网盘开放平台的开源桌面客户端"
authors = ["lvzhenbo"]
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true # 以较小的步骤编译您的二进制文件。

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true        # 启用链接时优化。
opt-level = "s"   # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort"   # 通过禁用 panic 处理程序来提高性能。
strip = true      # 确保移除调试符号。

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oof_plus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [
  "devtools",
  "protocol-asset",
  "tray-icon",
  "image-png",
] }
tauri-plugin-opener = "2.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri-plugin-http = "2.5.9"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-pinia = "4.2.0"
ali-oss-rs = "0.2.5"
fs4 = { version = "1.1.0", features = ["sync"] }
sha1 = "0.11.0"
reqwest = { version = "0.13.4", default-features = false, features = ["stream", "json", "native-tls", "form"] }
futures-util = "0.3.32"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.2", features = ["v4"] }
log = "0.4.32"
tauri-plugin-log = "2.8.0"
chrono = "0.4.45"
rusqlite = { version = "0.40.1" }

# HTTP API Server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-process = "2.3.1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.56.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
ttf-parser = "0.25.1"
